--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <!-- Fonts & Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Amoresa&family=Cinzel+Decorative&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/f2/65/9d/f2659d86d26dd45c4e272220d74e344b.jpg"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.pinimg.com/736x/f2/65/9d/f2659d86d26dd45c4e272220d74e344b.jpg"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.pinimg.com/736x/f2/65/9d/f2659d86d26dd45c4e272220d74e344b.jpg"/>
+
+    <!-- Apple touch icon for iOS/Home-screen -->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://i.pinimg.com/736x/f2/65/9d/f2659d86d26dd45c4e272220d74e344b.jpg"/>
     <style>
         /* ===== BASE STYLES ===== */
         :root {
@@ -1231,4 +1237,5 @@
         });
     </script>
 </body>
+
 </html>
