--- a/index.html
+++ b/index.html
@@ -831,9 +831,11 @@
             <a href="#feature-unavailable" class="action-icon">
                 <i class="fas fa-user"></i>
             </a>
-            <a href="#feature-unavailable" class="action-icon">
-                <i class="fas fa-shopping-cart"></i>
-                <span class="cart-badge" id="cart-badge">0</span>
+      <div class="icons">
+        <a href="cart.html" class="icon">
+            🛒
+            <span id="cart-count"></span>
+            <div class="cart-dot"></div>
             </a>
         </div>
     </nav>
@@ -1248,6 +1250,7 @@
 </body>
 
 </html>
+
 
 
 
