--- a/index.html
+++ b/index.html
@@ -1116,28 +1116,28 @@ html, body { overflow-x: hidden; }
                 <h2 class="section-title">Featured Spells</h2>
                 <div class="spells-grid">
                     <div class="spell-card">
-                        <img src="https://i.pinimg.com/736x/76/4b/ac/764bac3a419fdd49d2501874503175aa.jpg" alt="Dark Feminine" class="spell-image">
+                        <img src="https://i.pinimg.com/736x/eb/fe/18/ebfe180d7649aca9cdba30f223425d14.jpg" alt="Dark Feminine" class="spell-image">
                         <div class="spell-content">
                             <h3 class="spell-title">Dark Feminine</h3>
                             <p>They never recover after she walks away.</p>
                         </div>
                     </div>
                     <div class="spell-card">
-                        <img src="https://i.pinimg.com/736x/9c/40/f0/9c40f071aeea6aa40701ac804d7c3f65.jpg" alt="Daily Silence Core" class="spell-image">
+                        <img src="https://i.pinimg.com/736x/b7/fe/22/b7fe223f059af2062dec42c6b211e1af.jpg" alt="Daily Silence Core" class="spell-image">
                         <div class="spell-content">
                             <h3 class="spell-title">Daily Silence Core</h3>
                             <p>Honor your beauty as a sacred ceremony.</p>
                         </div>
                     </div>
                     <div class="spell-card">
-                        <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Subtle on the Eyes" class="spell-image">
+                        <img src="https://i.pinimg.com/736x/c8/ca/e2/c8cae26f346626b56c7a67617337eee2.jpg" alt="Subtle on the Eyes" class="spell-image">
                         <div class="spell-content">
                             <h3 class="spell-title">Subtle on the Eyes</h3>
                             <p>But bold on the lips.</p>
                         </div>
                     </div>
                     <div class="spell-card">
-                        <img src="https://images.unsplash.com/photo-1539109136881-3be0616acf4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Capsule Wardrobe" class="spell-image">
+                        <img src="https://i.pinimg.com/736x/87/f4/02/87f4023f9eec52e71ab807b0f188d1ac.jpg" alt="Capsule Wardrobe" class="spell-image">
                         <div class="spell-content">
                             <h3 class="spell-title">Capsule Wardrobe</h3>
                             <p>Minimal pieces: Infinite looks.</p>
@@ -1554,6 +1554,7 @@ html, body { overflow-x: hidden; }
 </body>
 
 </html>
+
 
 
 
