--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,93 @@ html, body { overflow-x: hidden; }
   .nav-links { gap: 30px; }
   .nav-links > a, .dropdown > a { font-size: 1.05rem; }
 }
+    /* --- Newsletter Section --- */
+.newsletter-wrap {
+  max-width: 640px;          /* controls how wide the whole block can go */
+  margin: 3rem auto;
+  padding: 0 16px;
+  text-align: center;
+}
+
+.newsletter-title {
+  font-size: 2rem;           /* larger heading */
+  color: #f4ede4;
+  letter-spacing: 0.08em;
+  text-shadow: 0 0 8px rgba(255,192,203,0.45);
+  margin-bottom: 0.5rem;
+}
+
+.newsletter-sub {
+  font-size: 1.05rem;
+  color: rgba(244,237,228,0.8);
+  margin-bottom: 1.25rem;
+}
+
+/* form layout */
+#newsletter-form {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  gap: 0;
+  margin: 0 auto;
+  max-width: 420px;          /* keeps input+button from being too wide */
+}
+
+/* input field */
+#newsletter-form input[type="email"] {
+  flex: 1 1 auto;
+  padding: 12px 16px;
+  border: 1px solid rgba(216,191,109,0.45);
+  border-right: none;
+  border-radius: 10px 0 0 10px;
+  background: rgba(20,18,20,0.75);
+  color: #f4ede4;
+  font-size: 0.95rem;
+  outline: none;
+  transition: border-color .25s, box-shadow .25s;
+}
+#newsletter-form input[type="email"]::placeholder {
+  color: rgba(244,237,228,0.6);
+  font-style: italic;
+}
+#newsletter-form input[type="email"]:focus {
+  border-color: #d8bf6d;
+  box-shadow: 0 0 8px rgba(216,191,109,0.4);
+}
+
+/* subscribe button */
+#newsletter-form input[type="submit"] {
+  padding: 12px 20px;
+  border: 1px solid rgba(216,191,109,0.6);
+  border-radius: 0 10px 10px 0;
+  background: linear-gradient(135deg, #5b3524 0%, #9d4133 55%, #d8bf6d 100%);
+  color: #1a1619;
+  font-weight: 600;
+  letter-spacing: .05em;
+  cursor: pointer;
+  transition: transform .2s ease, box-shadow .3s ease;
+}
+#newsletter-form input[type="submit"]:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 14px rgba(216,191,109,0.35);
+}
+#newsletter-form input[type="submit"]:active {
+  transform: translateY(0);
+  box-shadow: 0 0 6px rgba(216,191,109,0.25);
+}
+
+/* mobile stack */
+@media (max-width: 520px) {
+  #newsletter-form {
+    flex-direction: column;
+    max-width: 100%;
+    gap: 10px;
+  }
+  #newsletter-form input[type="email"],
+  #newsletter-form input[type="submit"] {
+    border-radius: 10px;
+    border-right: 1px solid rgba(216,191,109,0.45);
+  }
     </style>
 </head>
 <body>
@@ -1648,6 +1735,7 @@ html, body { overflow-x: hidden; }
 </body>
 
 </html>
+
 
 
 
