--- a/index.html
+++ b/index.html
@@ -1191,6 +1191,9 @@ html, body { overflow-x: hidden; }
     border-radius: 10px;
     border-right: 1px solid rgba(216,191,109,0.45);
   }
+    .notice { margin-top: 10px; min-height: 1.25rem; }
+.notice.ok  { color: #d8bf6d; }
+.notice.err { color: #ffb4b4; }
     </style>
 </head>
 <body>
@@ -1775,6 +1778,7 @@ html, body { overflow-x: hidden; }
 </body>
 
 </html>
+
 
 
 
