--- a/index.html
+++ b/index.html
@@ -1217,17 +1217,17 @@ html, body { overflow-x: hidden; }
           </div>
         </div>
 
-        <a href="coming-soon.html">Coming Soon</a>
-        <a href="brands.html">Brands By Me</a>
-        <a href="about.html">About Me</a>
-        <a href="contact.html">Contact Me</a>
+        <a href="coming-soon.com">Coming Soon</a>
+        <a href="brands.com">Brands By Me</a>
+        <a href="about.com">About Me</a>
+        <a href="contact.com">Contact Me</a>
       </div>
 
       <div class="nav-actions">
         <a href="#feature-unavailable" class="action-icon" aria-label="My profile">
           <i class="fas fa-user"></i>
         </a>
-        <a href="cart.html" class="cart-icon" aria-label="Cart">
+        <a href="cart.com" class="cart-icon" aria-label="Cart">
           <span class="cart-emoji">🛒</span>
           <span id="cart-count" class="cart-count">0</span>
         </a>
@@ -1517,14 +1517,14 @@ html, body { overflow-x: hidden; }
                     <div class="brand-card">
                         <img src="https://i.pinimg.com/736x/22/fb/c5/22fbc5cc2bee91020256974ceba38610.jpg" alt="SK Lux Natura" class="brand-image">
                         <div class="brand-content">
-                            <h3 class="brand-logo">SK LuxNatura</h3>
+                            <h3 class="brand-logo">SK LuxNatura Esthetics</h3>
                             <p>Luxurious skincare blends infused with ritual intention and botanical magic. Coming soon.</p>
                         </div>
                     </div>
                     <div class="brand-card">
-                        <img src="https://i.pinimg.com/736x/f7/b0/63/f7b0638d98b87b6140c6d38b0d4e9207.jpg" alt="Witch Hour Merch" class="brand-image">
+                        <img src="https://i.pinimg.com/736x/ec/4c/63/ec4c632f0feaff84c97eaa1e8ef54b7f.jpg" alt="Kepher Luxury Apparel" class="brand-image">
                         <div class="brand-content">
-                            <h3 class="brand-logo">WITCH HOUR MERCH</h3>
+                            <h3 class="brand-logo">Kepher | Luxury Fashion Brand</h3>
                             <p>Apparel and accessories for the modern enchantress. Limited edition drops coming soon.</p>
                         </div>
                     </div>
@@ -1589,7 +1589,7 @@ html, body { overflow-x: hidden; }
             <a href="https://www.lemon8.com/kingkepher" target="_blank"><i class="fas fa-lemon"></i></a>
         </div>
         <p class="copyright">© 2025 KingKepher | Enchantress Productions. All rights reserved.</p> 
-        <a href="terms.html" style="color: var(--text-color); text-decoration: underline;">Terms and Conditions</a>
+        <a href="terms.com" style="color: var(--text-color); text-decoration: underline;">Terms and Conditions</a>
 </footer>
 
     <script>
@@ -1757,6 +1757,7 @@ html, body { overflow-x: hidden; }
 </body>
 
 </html>
+
 
 
 
