--- a/index.html
+++ b/index.html
@@ -1217,17 +1217,17 @@ html, body { overflow-x: hidden; }
           </div>
         </div>
 
-        <a href="coming-soon.com">Coming Soon</a>
-        <a href="brands.com">Brands By Me</a>
-        <a href="about.com">About Me</a>
-        <a href="contact.com">Contact Me</a>
+        <a href="coming-soon.html">Coming Soon</a>
+        <a href="brands.html">Brands By Me</a>
+        <a href="about.html">About Me</a>
+        <a href="contact.html">Contact Me</a>
       </div>
 
       <div class="nav-actions">
         <a href="#feature-unavailable" class="action-icon" aria-label="My profile">
           <i class="fas fa-user"></i>
         </a>
-        <a href="cart.com" class="cart-icon" aria-label="Cart">
+        <a href="cart.html" class="cart-icon" aria-label="Cart">
           <span class="cart-emoji">🛒</span>
           <span id="cart-count" class="cart-count">0</span>
         </a>
@@ -1589,7 +1589,7 @@ html, body { overflow-x: hidden; }
             <a href="https://www.lemon8.com/kingkepher" target="_blank"><i class="fas fa-lemon"></i></a>
         </div>
         <p class="copyright">© 2025 KingKepher | Enchantress Productions. All rights reserved.</p> 
-        <a href="terms.com" style="color: var(--text-color); text-decoration: underline;">Terms and Conditions</a>
+        <a href="terms.html" style="color: var(--text-color); text-decoration: underline;">Terms and Conditions</a>
 </footer>
 
     <script>
@@ -1757,6 +1757,7 @@ html, body { overflow-x: hidden; }
 </body>
 
 </html>
+
 
 
 
