--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Apple touch icon for iOS/Home-screen -->
     <link rel="apple-touch-icon" sizes="180x180" href="https://i.pinimg.com/736x/f2/65/9d/f2659d86d26dd45c4e272220d74e344b.jpg"/>
+    <script src="//code.tidio.co/beulmj70f5ssjlufu9idav25wfcaxgco.js" async></script>
     <style>
         /* ===== BASE STYLES ===== */
         :root {
@@ -1758,6 +1759,7 @@ html, body { overflow-x: hidden; }
 </body>
 
 </html>
+
 
 
 
