--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@ html, body { overflow-x: hidden; }
         <a href="index.html">Home</a>
 
         <div class="dropdown">
-          <a href="#">Content <i class="fas fa-chevron-down"></i></a>
+          <a href="content.html">Content <i class="fas fa-chevron-down"></i></a>
           <div class="dropdown-content">
             <a href="tiktok.html">TikTok</a>
             <a href="instagram.html">Instagram</a>
@@ -1217,7 +1217,7 @@ html, body { overflow-x: hidden; }
             <a href="lemon8.html">Lemon8</a>
           </div>
         </div>
-        <a href="kepher.html">Kepher</a>
+        <a href="ambassador.html">Ambassador</a>
         <a href="coming-soon.html">Coming Soon</a>
         <a href="brands.html">Brands By Me</a>
         <a href="about.html">About Me</a>
@@ -1759,6 +1759,7 @@ html, body { overflow-x: hidden; }
 </body>
 
 </html>
+
 
 
 
