--- a/brands.html
+++ b/brands.html
@@ -1,1 +1,194 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Brands By Me | The Enchantress Hub</title>
+  <meta name="description" content="Explore brands created by Kerrington J. Johnson — starting with SK LuxNatura Esthetics." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Feel free to swap to your site fonts; these pair well with your vibe -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#1a1619;
+      --ink:#f4ede4;
+      --ink-dim:rgba(244,237,228,.8);
+      --gold:#d8bf6d;
+      --rose:#e2949e;
+      --wine:#9d4133;
+      --cocoa:#5b3524;
+      --stone:#b2a79d;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;background:var(--bg);color:var(--ink);font-family:Manrope,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.6}
+    a{color:var(--rose);text-decoration:none}
+    a:hover{text-decoration:underline}
 
+    /* Page shell */
+    .container{max-width:1100px;margin:0 auto;padding:24px}
+    .hero{
+      text-align:center; padding:56px 24px 28px;
+      background:
+        radial-gradient(60% 60% at 50% 0%, rgba(216,191,109,.08), transparent 60%),
+        radial-gradient(30% 30% at 85% 10%, rgba(226,148,158,.08), transparent 60%);
+      border-bottom:1px solid rgba(216,191,109,.22);
+    }
+    .eyebrow{
+      font-size:.82rem; letter-spacing:.25em; text-transform:uppercase;
+      color:var(--ink-dim);
+    }
+    h1{
+      font-family:"Cinzel Decorative",serif; letter-spacing:.08em; text-transform:uppercase;
+      margin:.35rem 0 1rem; font-size:2.2rem; color:var(--gold);
+      text-shadow:0 0 10px rgba(216,191,109,.25);
+    }
+    .lead{max-width:720px;margin:0 auto;color:var(--ink-dim)}
+
+    /* Grid */
+    .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:24px;margin:28px auto 64px}
+    .card{
+      grid-column:span 12;
+      background: linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
+      border:1px solid rgba(216,191,109,.25);
+      border-radius:18px; overflow:hidden; display:grid; grid-template-columns:1.1fr 1fr;
+      box-shadow:0 10px 30px rgba(0,0,0,.35);
+      transition: transform .25s ease, box-shadow .25s ease, border-color .25s ease;
+    }
+    .card:hover{
+      transform: translateY(-4px);
+      border-color: rgba(216,191,109,.45);
+      box-shadow:0 16px 36px rgba(0,0,0,.45);
+    }
+    .card-media{
+      min-height:280px; position:relative; background:#0f0d0f; overflow:hidden;
+      display:flex; align-items:center; justify-content:center;
+    }
+    .card-media img{
+      width:100%; height:100%; object-fit:cover; display:block; opacity:.92;
+      filter: saturate(1.02) contrast(1.02);
+    }
+    .card-body{padding:26px 26px 22px}
+    .brand-kicker{
+      font-size:.8rem; letter-spacing:.22em; text-transform:uppercase; color:var(--ink-dim);
+    }
+    .brand-title{
+      margin:.35rem 0 .6rem; font-size:1.6rem; color:var(--ink);
+      font-weight:800; letter-spacing:.02em;
+    }
+    .brand-copy{color:var(--ink-dim); margin:0 0 1rem}
+    .chips{display:flex; flex-wrap:wrap; gap:8px; margin-bottom:1rem}
+    .chip{
+      font-size:.78rem; padding:6px 10px; border-radius:999px;
+      border:1px solid rgba(216,191,109,.35); color:var(--ink);
+      background: rgba(216,191,109,.08);
+    }
+    .cta-row{display:flex; flex-wrap:wrap; gap:12px; align-items:center}
+    .btn{
+      appearance:none; border:1px solid rgba(216,191,109,.6); color:#1a1619;
+      background: linear-gradient(135deg, var(--cocoa) 0%, var(--wine) 55%, var(--gold) 100%);
+      padding:12px 18px; border-radius:12px; font-weight:700; letter-spacing:.05em; cursor:pointer;
+      transition:transform .18s ease, box-shadow .28s ease, filter .18s ease;
+      text-decoration:none; display:inline-flex; align-items:center; gap:8px;
+    }
+    .btn:hover{ transform:translateY(-2px); box-shadow:0 10px 22px rgba(216,191,109,.35); filter:brightness(1.02)}
+    .btn:active{ transform:translateY(0); box-shadow:0 4px 12px rgba(216,191,109,.25)}
+    .subtle{color:var(--ink-dim); font-size:.9rem}
+
+    /* Responsive */
+    @media (max-width: 980px){
+      .card{ grid-template-columns:1fr; }
+      .card-media{ min-height:220px; }
+    }
+    @media (min-width: 1100px){
+      h1{ font-size:2.5rem; }
+      .brand-title{ font-size:1.8rem; }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Optional: include your site-wide nav here -->
+  <!-- Navigation Bar -->
+<nav class="enchantress-nav">
+  <div class="container">
+    <a href="index.html" class="logo">ENCHANTRESS PRODUCTIONS</a>
+
+    <!-- NEW: center wrapper holds links + actions -->
+    <div class="nav-center">
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+
+        <div class="dropdown">
+          <a href="content.html">Content <i class="fas fa-chevron-down"></i></a>
+          <div class="dropdown-content">
+            <a href="tiktok.html">TikTok</a>
+            <a href="instagram.html">Instagram</a>
+            <a href="youtube.html">YouTube</a>
+            <a href="lemon8.html">Lemon8</a>
+          </div>
+        </div>
+        <a href="ambassador.html">Ambassador</a>
+        <a href="coming-soon.html">Coming Soon</a>
+        <a href="brands.html">Brands By Me</a>
+        <a href="about.html">About Me</a>
+        <a href="contact.html">Contact Me</a>
+      </div>
+
+      <div class="nav-actions">
+        <a href="#feature-unavailable" class="action-icon" aria-label="My profile">
+          <i class="fas fa-user"></i>
+        </a>
+        <a href="cart.html" class="cart-icon" aria-label="Cart">
+          <span class="cart-emoji">🛒</span>
+          <span id="cart-count" class="cart-count">0</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</nav>
+
+  <header class="hero">
+    <div class="container">
+      <div class="eyebrow">Curated by KingKepher</div>
+      <h1>Brands By Me</h1>
+      <p class="lead">Explore my creations and collaborations—crafted with dark feminine elegance, ritual care, and cinematic precision.</p>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="grid">
+      <!-- CARD: SK LuxNatura Esthetics -->
+      <article class="card">
+        <div class="card-media">
+          <!-- 🔁 Replace with your real image path -->
+          <img src="https://i.pinimg.com/736x/fe/de/07/fede07717f2844c9d74ecee3f85cf12e.jpg" alt="SK LuxNatura Esthetics product showcase">
+        </div>
+        <div class="card-body">
+          <div class="brand-kicker">Luxury Body & Skin Care</div>
+          <h2 class="brand-title">SK LuxNatura Esthetics</h2>
+          <p class="brand-copy">
+            A ritual body-care atelier blending botanicals and sensual textures. From the iconic body scrubs to the
+            Illumination Potion—each formula is crafted for luminous skin and a decadent self-care experience.
+          </p>
+          <div class="chips">
+            <span class="chip">Vegan-friendly</span>
+            <span class="chip">Small-Batch</span>
+            <span class="chip">Witchy-Lux Vibe</span>
+          </div>
+          <div class="cta-row">
+            <!-- 🔗 Update href to your live SK site -->
+            <a class="btn" href="https://www.luxnaturaesthetics.com" target="_blank" rel="noopener">Visit SK LuxNatura</a>
+            <span class="subtle">Shop best-sellers, rituals, and limited drops.</span>
+          </div>
+        </div>
+      </article>
+
+      <!-- When you’re ready, duplicate <article class="card"> for more brands -->
+    </section>
+  </main>
+
+  <!-- Optional: include your site-wide footer here -->
+
+</body>
+</html>
