--- a/brands.html
+++ b/brands.html
@@ -10,15 +10,397 @@
   <!-- Feel free to swap to your site fonts; these pair well with your vibe -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{
-      --bg:#1a1619;
-      --ink:#f4ede4;
-      --ink-dim:rgba(244,237,228,.8);
-      --gold:#d8bf6d;
-      --rose:#e2949e;
-      --wine:#9d4133;
-      --cocoa:#5b3524;
-      --stone:#b2a79d;
+    /* ===== BASE STYLES ===== */
+        :root {
+            --bg: #170f0e;
+            --text: #e5d0a9;
+            --accent: #e2949e;
+            --highlight: #2a122d;
+            --secondary: #614d51;
+        }
+        
+        body {
+            margin: 0;
+            padding: 0;
+            background: var(--bg);
+            color: var(--text);
+            font-family: 'Playfair Display', serif;
+            overflow-x: hidden;
+            scroll-behavior: smooth;
+        }
+
+        /* ===== NAVIGATION BAR ===== */
+        .enchantress-nav {
+            background: rgba(23, 15, 14, 0.9);
+            backdrop-filter: blur(10px);
+            padding: 1rem 3rem;
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid var(--secondary);
+        }
+
+        .logo {
+            font-family: 'Amoresa', 'Cinzel Decorative', serif;
+            font-size: 1.8rem;
+            color: var(--text);
+            text-decoration: none;
+            letter-spacing: 1px;
+            transition: all 0.3s;
+        }
+
+        .logo:hover {
+            color: var(--accent);
+            text-shadow: 0 0 10px var(--accent);
+        }
+
+        /* Navigation Links */
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+            align-items: center;
+        }
+
+        .nav-links a {
+            color: var(--text);
+            text-decoration: none;
+            font-family: 'Cinzel Decorative', serif;
+            font-size: 1.1rem;
+            position: relative;
+            transition: all 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: var(--accent);
+        }
+
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 1px;
+            background: var(--accent);
+            transition: width 0.3s;
+        }
+
+        .nav-links a:hover::after {
+            width: 100%;
+        }
+
+        /* Dropdown Menu */
+        .dropdown {
+            position: relative;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background: var(--bg);
+            min-width: 200px;
+            box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+            z-index: 1;
+            border: 1px solid var(--secondary);
+            border-radius: 0 0 5px 5px;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown-content a {
+            padding: 12px 16px;
+            display: block;
+            font-size: 1rem;
+        }
+
+        .dropdown-content a:hover {
+            background: rgba(97, 77, 81, 0.3);
+        }
+
+        /* ===== CART & PROFILE ICONS ===== */
+        .nav-actions {
+            display: flex;
+            gap: 1.5rem;
+        }
+
+        .action-icon {
+            position: relative;
+            color: var(--text);
+            font-size: 1.3rem;
+            transition: all 0.3s;
+        }
+
+        .action-icon:hover {
+            color: var(--accent);
+            transform: scale(1.1);
+        }
+
+        .cart-badge {
+            position: absolute;
+            top: -8px;
+            right: -8px;
+            background: #ff4d4d;
+            color: white;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            font-family: 'Playfair Display', serif;
+            box-shadow: 0 0 8px rgba(255, 77, 77, 0.6);
+            border: 1px solid var(--bg);
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
+
+        .pulse {
+            animation: pulse 0.5s ease-in-out;
+        }
+
+        /* ===== PAGE CONTENT ===== */
+        .page-content {
+            padding-top: 80px;
+            min-height: 100vh;
+        }
+
+        /* ===== HERO SECTION ===== */
+        .hero {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
+                        url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?ixlib=rb-4.0.3&auto=format&fit=crop&w=2048&q=80') no-repeat center/cover;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero-content {
+            z-index: 10;
+            padding: 0 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .hero-content h1 {
+            font-family: 'Amoresa', 'Cinzel Decorative', serif;
+            font-size: 5rem;
+            margin-bottom: 1.5rem;
+            text-shadow: 0 0 10px var(--accent);
+            animation: glow 3s infinite alternate;
+        }
+
+        @keyframes glow {
+            to { text-shadow: 0 0 20px var(--accent); }
+        }
+
+        .hero-content p {
+            font-size: 1.5rem;
+            margin-bottom: 3rem;
+            max-width: 700px;
+            line-height: 1.6;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .hero-buttons {
+            display: flex;
+            gap: 1.5rem;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .btn {
+            padding: 15px 30px;
+            background: transparent;
+            border: 2px solid var(--accent);
+            color: var(--text);
+            font-family: 'Playfair Display', serif;
+            font-size: 1.1rem;
+            text-decoration: none;
+            transition: all 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn:hover {
+            background: rgba(226, 148, 158, 0.1);
+            box-shadow: 0 0 20px var(--accent);
+        }
+
+        /* ===== SECTION STYLES ===== */
+        .section {
+            padding: 5rem 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        }
+
+        .section.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .section-title {
+            font-family: 'Amoresa', 'Cinzel Decorative', serif;
+            font-size: 3rem;
+            text-align: center;
+            margin-bottom: 3rem;
+            text-shadow: 0 0 10px var(--accent);
+            animation: glow 3s infinite alternate;
+        }
+
+        /* ===== FEATURED SPELLS ===== */
+        .spells-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+
+        .spell-card {
+            background: rgba(33, 20, 16, 0.5);
+            border: 1px solid var(--secondary);
+            padding: 0;
+            border-radius: 5px;
+            transition: all 0.3s;
+            overflow: hidden;
+        }
+
+        .spell-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+            border-color: var(--accent);
+        }
+
+        .spell-image {
+            height: 200px;
+            width: 100%;
+            object-fit: cover;
+            border-bottom: 1px solid var(--secondary);
+        }
+
+        .spell-content {
+            padding: 1.5rem;
+        }
+
+        .spell-title {
+            font-family: 'Cinzel Decorative', serif;
+            font-size: 1.5rem;
+            color: var(--accent);
+            margin-bottom: 1rem;
+        }
+
+        /* ===== STATS SECTION ===== */
+        .stats-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 2rem;
+            text-align: center;
+        }
+
+        .stat-number {
+            font-family: 'Cinzel Decorative', serif;
+            font-size: 2.5rem;
+            color: var(--accent);
+            margin-bottom: 0.5rem;
+        }
+
+        .stat-label {
+            font-size: 1rem;
+            color: var(--text);
+            opacity: 0.8;
+        }
+
+        /* ===== SERIES SECTION ===== */
+        .series-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+
+        .series-card {
+            background: rgba(33, 20, 16, 0.5);
+            border: 1px solid var(--secondary);
+            padding: 0;
+            border-radius: 5px;
+            transition: all 0.3s;
+            overflow: hidden;
+        }
+
+        .series-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+            border-color: var(--accent);
+        }
+
+        .series-image {
+            height: 200px;
+            width: 100%;
+            object-fit: cover;
+            border-bottom: 1px solid var(--secondary);
+        }
+
+        .series-content {
+            padding: 1.5rem;
+        }
+
+        .series-title {
+            font-family: 'Cinzel Decorative', serif;
+            font-size: 1.8rem;
+            color: var(--accent);
+            margin-bottom: 1rem;
+        }
+
+        /* ===== PROFILE PAGE ===== */
+        .profile-container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 3rem 2rem;
+            background: rgba(33, 20, 16, 0.3);
+            border-radius: 5px;
+            border: 1px solid var(--secondary);
+        }
+
+        .profile-header {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        .profile-avatar {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 3px solid var(--accent);
+            margin-bottom: 1rem;
+        }
+
+        .profile-title {
+            font-family: 'Amoresa', 'Cinzel Decorative', serif;
+            font-size: 2rem;
+            color: var(--accent);
+            margin-bottom: 0.5rem;
+        }
+
+        .auth-tabs {
+            display: flex;
+            margin-bottom: 2rem;
+            border-bottom: 1px solid var(--secondary);
+        }
     }
     *{box-sizing:border-box}
     html,body{margin:0;background:var(--bg);color:var(--ink);font-family:Manrope,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.6}
@@ -189,6 +571,16 @@
   </main>
 
   <!-- Optional: include your site-wide footer here -->
-
+        <!-- Footer -->
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.tiktok.com/@kingkepher" target="_blank"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.instagram.com/kingkepher/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@kingkepher" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.lemon8.com/kingkepher" target="_blank"><i class="fas fa-lemon"></i></a>
+        </div>
+        <p class="copyright">© 2025 KingKepher | Enchantress Productions. All rights reserved.</p> 
+        <a href="terms.html" style="color: var(--text-color); text-decoration: underline;">Terms and Conditions</a>
+    </footer>
 </body>
 </html>
