--- a/brands.html
+++ b/brands.html
@@ -491,37 +491,40 @@
 <body>
 
   <!-- Optional: include your site-wide nav here -->
-  <!-- Navigation Bar -->
+  <!-- Enchantress Global Navigation -->
 <nav class="enchantress-nav">
   <div class="container">
-    <a href="index.html" class="logo">ENCHANTRESS PRODUCTIONS</a>
+    <!-- Logo / Brand -->
+    <a href="/index.html" class="logo">ENCHANTRESS PRODUCTIONS</a>
 
-    <!-- NEW: center wrapper holds links + actions -->
     <div class="nav-center">
+      <!-- Primary links -->
       <div class="nav-links">
-        <a href="index.html">Home</a>
+        <a href="/index.html">Home</a>
 
         <div class="dropdown">
-          <a href="content.html">Content <i class="fas fa-chevron-down"></i></a>
+          <a href="#">Content <i class="fas fa-chevron-down"></i></a>
           <div class="dropdown-content">
-            <a href="tiktok.html">TikTok</a>
-            <a href="instagram.html">Instagram</a>
-            <a href="youtube.html">YouTube</a>
-            <a href="lemon8.html">Lemon8</a>
+            <a href="/tiktok.html">TikTok</a>
+            <a href="/instagram.html">Instagram</a>
+            <a href="/youtube.html">YouTube</a>
+            <a href="/lemon8.html">Lemon8</a>
           </div>
         </div>
-        <a href="ambassador.html">Ambassador</a>
-        <a href="coming-soon.html">Coming Soon</a>
-        <a href="brands.html">Brands By Me</a>
-        <a href="about.html">About Me</a>
-        <a href="contact.html">Contact Me</a>
+
+        <a href="/ambassador.html">Ambassador</a>
+        <a href="/coming-soon.html">Coming&nbsp;Soon</a>
+        <a href="/brands.html">Brands&nbsp;By&nbsp;Me</a>
+        <a href="/about.html">About&nbsp;Me</a>
+        <a href="/contact.html">Contact&nbsp;Me</a>
       </div>
 
+      <!-- Icons -->
       <div class="nav-actions">
-        <a href="#feature-unavailable" class="action-icon" aria-label="My profile">
+        <a href="account.html" class="action-icon" aria-label="Profile">
           <i class="fas fa-user"></i>
         </a>
-        <a href="cart.html" class="cart-icon" aria-label="Cart">
+        <a href="/cart.html" class="cart-icon" aria-label="Cart">
           <span class="cart-emoji">🛒</span>
           <span id="cart-count" class="cart-count">0</span>
         </a>
