--- a/brands.html
+++ b/brands.html
@@ -648,7 +648,7 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="container brands- section">
     <section class="grid">
       <!-- CARD: SK LuxNatura Esthetics -->
       <article class="card">
