--- a/brands.html
+++ b/brands.html
@@ -432,7 +432,7 @@
     }
     h1{
       font-family:"Cinzel Decorative",serif; letter-spacing:.08em; text-transform:uppercase;
-      margin:.35rem 0 1rem; font-size:2.2rem; color:var(--gold);
+      margin:.35rem 0 1rem; font-size:2.2rem; color:e8dcd0;
       text-shadow:0 0 10px rgba(216,191,109,.25);
     }
     .lead{max-width:720px;margin:0 auto;color:var(--ink-dim)}
