--- a/brands.html
+++ b/brands.html
@@ -432,7 +432,7 @@
     }
     h1{
       font-family:"Cinzel Decorative",serif; letter-spacing:.08em; text-transform:uppercase;
-      margin:.35rem 0 1rem; font-size:2.2rem; color:e8dcd0;
+      margin:.35rem 0 1rem; font-size:2.2rem; color:var(--gold);
       text-shadow:0 0 10px rgba(216,191,109,.25);
     }
     .lead{max-width:720px;margin:0 auto;color:var(--ink-dim)}
@@ -648,7 +648,7 @@
     </div>
   </header>
 
-  <main class="container brands- section">
+  <main class="container">
     <section class="grid">
       <!-- CARD: SK LuxNatura Esthetics -->
       <article class="card">
@@ -690,7 +690,7 @@
             <a href="https://www.lemon8.com/kingkepher" target="_blank"><i class="fas fa-lemon"></i></a>
         </div>
         <p class="copyright">© 2025 KingKepher | Enchantress Productions. All rights reserved.</p> 
-        <a href="terms.html" style="color: var(--text-color); text-decoration: underline;">Terms and Conditions</a>
+        <a href="terms.html" style="color: root (--text-color); text-decoration: underline;">Terms and Conditions</a>
     </footer>
 </body>
 </html>
